Rename genres to publications
