# services/swagger/openapi.yaml
@@ -5,7 +5,7 @@ info:
 servers:
   - url: http://127.0.0.1:8000
 paths:
-  /api/v1/movies/:
+  /api/v1/laboratories/:
     get:
       description: ""
       parameters:
@@ -46,7 +46,7 @@ paths:
                     items:
                       $ref: "#/components/schemas/Movie"
   
-  /api/v1/movies/{id}:
+  /api/v1/laboratories/{id}:
     get:
       description: ""
       parameters:
@@ -95,13 +95,13 @@ components:
           type: string
           description: Тип
           example: movie
-        genres:
+        publications:
           type: array
-          description: Список жанров
+          description: Список публикаций
           example: [Drama, Short]
           items:
             type: string
-            description: Название жанра
+            description: Название публикации
         actors:
           type: array
           description: Список актёров
